--- a/front/src/app/components/Header/Header.module.css
+++ b/front/src/app/components/Header/Header.module.css
@@ -25,7 +25,11 @@
     width: 100%;
 }
 
-.navigation span, .hoverMenu span {
+.navigation .navItem {
+    position: relative;
+}
+
+.navigation span {
     font-size: 1.2rem;
     color: #333;
     cursor: pointer;
@@ -46,12 +50,25 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     position: absolute;
     top: 100%;
-    width: 100%;
+    left: 0;
+    width: max-content;
+    z-index: 1;
+}
+
+.hoverMenu span {
+    font-size: 1rem;
+    color: #333;
+    padding: 5px 0;
+    cursor: pointer;
 }
 
 @media (max-width: 600px) {
-    .navigation, .hoverMenu {
+    .navigation {
         flex-direction: column;
         gap: 20px;
+    }
+
+    .hoverMenu {
+        width: auto;
     }
 }
