--- a/front/src/app/components/Header/Header.module.css
+++ b/front/src/app/components/Header/Header.module.css
@@ -2,27 +2,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1%;
-    background-color: #f8f8f8;
+    background-color: #ffffff;
     position: relative;
 }
 
 .logoSection {
     margin-bottom: 10px;
-    padding: 1%;
+    padding: 10px;
 }
 
 .divider {
     border-top: 1px solid #ccc;
-    width: 95%;
+    width: 100%;
     margin: 10px 0;
 }
 
 .navigation {
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 5%;
     width: 100%;
+    margin-bottom: 1%;
 }
 
 .navigation .navItem {
@@ -30,7 +30,7 @@
 }
 
 .navigation span {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     color: #333;
     cursor: pointer;
     text-decoration: none;
