--- a/front/src/app/products/products.module.css
+++ b/front/src/app/products/products.module.css
@@ -12,7 +12,7 @@
 
 .filters {
     display: flex;
-    align-items:flex-start; /* 필터 섹션을 중앙 정렬 */
+    align-items: flex-start; /* 필터 섹션을 중앙 정렬 */
     gap: 20px;
     margin-bottom: 10px;
 }
@@ -40,7 +40,7 @@
 }
 
 .productItem {
-    width: calc(35% - 10px);
+    width: calc(25% - 20px); /* 기본적으로 한 줄에 4개 */
     box-sizing: border-box;
     border: 1px solid #f0f0f0;
     padding: 20px;
@@ -75,4 +75,32 @@
 .productName {
     font-size: 20px;
     font-weight: bold;
+}
+
+.purchaseButton {
+    padding: 10px 20px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    align-self: flex-start;
+}
+
+/* 미디어 쿼리 추가 */
+@media (max-width: 1200px) {
+    .productItem {
+        width: calc(33.33% - 20px); /* 화면 크기가 1200px 이하일 때 한 줄에 3개 */
+    }
+}
+
+@media (max-width: 900px) {
+    .productItem {
+        width: calc(50% - 20px); /* 화면 크기가 900px 이하일 때 한 줄에 2개 */
+    }
+}
+
+@media (max-width: 600px) {
+    .productItem {
+        width: calc(100% - 20px); /* 화면 크기가 600px 이하일 때 한 줄에 1개 */
+    }
 }
